--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
   <li>To personalize fitness experiences</li>
   <li>To ensure security and prevent abuse</li>
 </ul>
+  <h2>Account Deletion</h2>
+<p>
+Users may request deletion of their Hippo+ account and associated data by
+emailing <a href="mailto:support@hippoplus.app">support@hippoplus.app</a>
+from their registered email address.
+</p>
+<p>
+Account data is permanently deleted within 30 days of verification.
+</p>
+
 
 <h2>Data Storage</h2>
 <p>
@@ -80,4 +90,5 @@ Email: <a href="mailto:connect.hippoplus@gmail.com">connect.hippoplus@gmail.com<
 
 </body>
 </html>
+
 
