--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <h2>Account Deletion</h2>
 <p>
 Users may request deletion of their Hippo+ account and associated data by
-emailing <a href="mailto:support@hippoplus.app">support@hippoplus.app</a>
+emailing <a href="mailto:connect.hippoplus@gmail.com">connect.hippoplus@gmail.com</a>
 from their registered email address.
 </p>
 <p>
@@ -90,5 +90,6 @@ Email: <a href="mailto:connect.hippoplus@gmail.com">connect.hippoplus@gmail.com<
 
 </body>
 </html>
+
 
 
